--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Fermle - A daily estimation game. Guess the order of magnitude!" />
+    <meta name="description" content="Fermle - A daily Fermi estimation game. Guess orders of magnitude and test your estimation skills. Like Wordle, but for numbers.">
+    <meta name="keywords" content="Fermi estimation, daily puzzle, number game, Wordle, estimation game, order of magnitude">
+    <meta property="og:title" content="Fermle - Daily Estimation Game">
+    <meta property="og:description" content="How good are your Fermi estimation skills? Play daily and compete on the leaderboard.">
+    <meta property="og:url" content="https://fermle.io">
     <meta name="theme-color" content="#1a1a2e" />
     <meta name="author" content="Arv Hughes">
     <meta name="copyright" content="© 2026 Arv Hughes">
     
+
+
+
+
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164792985-1"></script>
     <script>
